--- a/lib/dumb_receipt/views/data.yml
+++ b/lib/dumb_receipt/views/data.yml
@@ -346,7 +346,13 @@ responses:
   offers:
     read:
       failures:
-        offers_not_redeemed:
+        offers_not_marked_as_read:
           error:
-            type: OffersNotRedeemed
-            message: The offers could not all be redeemed.
+            type: OffersNotMarkedAsRead
+            message: The offers could not be marked as read.
+    redeem:
+      failures:
+        offer_not_redeemed:
+          error:
+            type: OfferNotRedeemed
+            message: The offer could not be redeemed.
