--- a/lib/dumb_receipt/views/data.yml
+++ b/lib/dumb_receipt/views/data.yml
@@ -304,6 +304,10 @@ users:
   current_sign_in_ip: 10.1.48.2
   last_sign_in_ip: 10.1.0.42
 
+stats:
+  total_offers_received: 28
+  total_offers_redeemed: 12
+
 responses:
   registration:
     success:
