--- a/views/data.yml
+++ b/views/data.yml
@@ -6,134 +6,126 @@
 #
 
 receipts:
-- uuid: 442c5d34-2eb7-11e2-81c1-0800200c9a66
-  cashier: Joe
-  check: 9823
-  trans: 98723
-  order: 92
-  table: 20
-  currency: USD
-  claimed_at: 2013-10-19T09:39Z
-  completed_at: 2013-11-19T09:39Z
-  item_count: '4'
+- uuid: "442c5d34-2eb7-11e2-81c1-0800200c9a66"
+  cashier: "Joe"
+  check: "9823"
+  order: "92"
+  currency: "USD"
+  claimed_at: 2013-10-19T09:39:00Z
+  completed_at: 2013-11-19T09:39:00Z
+  item_count: 4
   totals:
-  - subtotal: '11.28'
-  - tax: '0.78'
-  - total: '10.50'
+  - subtotal: 11.28
+  - tax: 0.78
+  - total: 10.50
   items:
-  - name: Candy
-    price: '0.50'
-    quantity: '1'
-  - name: Pizza
-    price: '5.00'
-    quantity: '2'
+  - name: "Candy"
+    price: 0.50
+    quantity: 1
+  - name: "Pizza"
+    price: 5.00
+    quantity: 2
   zones:
-  - type: header
-    image_url: https://dumb-receipt.herokuapp.com/images/header.png
+  - type: "header"
+    image_url: "https://dumb-receipt.herokuapp.com/images/header.png"
   offers:
-  - 439c5d30-2eb7-10e2-81c1-0800200c9a66
-  - 439c5d31-2eb7-10e2-81c1-0800200c9a66
-  - 439c5d32-2eb7-10e2-81c1-0800200c9a66
-  location: 439c5d34-2eb7-11e2-81c1-0800200c9a66
-- uuid: 440c5d34-2eb7-11e2-81c1-0800200c9a66
-  cashier: Joe
-  check: 9826
-  trans: 98727
-  order: 96
-  table: 24
-  currency: USD
-  claimed_at: 2013-07-19T09:39Z
-  completed_at: 2013-07-19T09:39Z
-  item_count: '3'
+  - "439c5d30-2eb7-10e2-81c1-0800200c9a66"
+  - "439c5d31-2eb7-10e2-81c1-0800200c9a66"
+  - "439c5d32-2eb7-10e2-81c1-0800200c9a66"
+  location: "453c5d34-2eb7-11e2-81c1-0800200c9a66"
+- uuid: "440c5d34-2eb7-11e2-81c1-0800200c9a66"
+  check: "9826"
+  order: "96"
+  currency: "USD"
+  claimed_at: 2013-07-19T09:39:00Z
+  completed_at: 2013-07-19T09:39:23Z
+  item_count: 3
   totals:
-  - subtotal: '11.28'
-  - tax: '0.78'
-  - total: '10.50'
+  - subtotal: 11.28
+  - tax: 0.78
+  - total: 10.50
   items:
-  - name: Candy
-    price: '0.50'
-    quantity: '1'
-  - name: Pizza
-    price: '5.00'
-    quantity: '2'
+  - name: "Candy"
+    price: 0.50
+    quantity: 1
+  - name: "Pizza"
+    price: 5.00
+    quantity: 2
   zones:
-  - type: items
-  location: 439c5d34-2eb7-11e2-81c1-0800200c9a66
-- uuid: 444c5d34-2eb7-11e2-81c1-0800200c9a66
-  cashier: Joe
-  check: 9832
-  trans: 98730
-  table: 24
-  currency: USD
-  claimed_at: 2012-12-19T09:39Z
-  completed_at: 2012-14-19T09:39Z
-  item_count: '4'
+  - type: "items"
+  location: "483c5d34-2eb7-11e2-81c1-0800200c9a66"
+- uuid: "444c5d34-2eb7-11e2-81c1-0800200c9a66"
+  cashier: "Joe"
+  transaction: "98730"
+  currency: "USD"
+  claimed_at: 2012-12-19T09:39:23Z
+  completed_at: 2012-12-29T09:39:32Z
+  item_count: 4
   totals:
-  - subtotal: '0.85'
-  - tax: '0.61'
-  - total: '0.79'
+  - subtotal: 0.85
+  - tax: 0.61
+  - total: 0.79
   items:
   - name: Taco
-    price: '0.79'
-    quantity: '1'
+    price: 0.79
+    quantity: 1
   zones:
-  - type: totals
+  - type: "totals"
   offers:
-  - 441c5d32-2eb7-11e2-81c1-0800200c9a66
-  location: 439c5d33-2eb7-11e2-81c1-0800200c9a66
-- uuid: 439c5d34-2eb7-11e2-81c1-0800200c9a66
-  cashier: Joe
-  trans: 98723
-  order: 92
-  currency: USD
-  claimed_at: 2012-07-19T09:39Z
-  completed_at: 2012-07-19T09:39Z
-  item_count: '2'
+  - "441c5d32-2eb7-11e2-81c1-0800200c9a66"
+  location: "439c5d33-2eb7-11e2-81c1-0800200c9a66"
+- uuid: "447c5d34-2eb7-11e2-81c1-0800200c9a66"
+  cashier: "Mary"
+  order: "92"
+  currency: "USD"
+  claimed_at: 2012-07-19T09:39:42Z
+  completed_at: 2012-07-19T09:39:17Z
+  item_count: 2
   totals:
-  - subtotal: '2.67'
-  - tax: '0.19'
-  - total: '2.48'
+  - subtotal: 2.67
+  - tax: 0.19
+  - total: 2.48
   items:
-  - name: Burrito
-    price: '1.49'
-    quantity: '1'
-  - name: Soda
-    price: '0.99'
-    quantity: '1'
+  - name: "Burrito"
+    price: 1.49
+    quantity: 1
+  - name: "Soda"
+    price: 0.99
+    quantity: 1
   zones:
-  - type: items
+  - type: "items"
   offers:
-  - 444c5d31-2eb7-11e2-81c1-0800200c9a66
-  - 446c5d32-2eb7-11e2-81c1-0800200c9a66
-  location: 439c5d33-2eb7-11e2-81c1-0800200c9a66
-- uuid: 439c5d34-2eb7-11e2-81c1-0800200c9a66
-  check: 9832
-  order: 99
-  currency: USD
-  claimed_at: 2012-07-19T09:39Z
-  completed_at: 2012-07-19T09:39Z
-  item_count: '4'
+  - "444c5d31-2eb7-11e2-81c1-0800200c9a66"
+  - "446c5d32-2eb7-11e2-81c1-0800200c9a66"
+  location: "439c5d33-2eb7-11e2-81c1-0800200c9a66"
+- uuid: "458c5d34-2eb7-11e2-81c1-0800200c9a66"
+  check: "9832"
+  order: "99"
+  currency: "USD"
+  claimed_at: 2012-07-19T09:39:23Z
+  completed_at: 2012-07-19T09:39:38Z
+  item_count: 4
   totals:
-  - subtotal: '10.09'
-  - tax: '1.09'
-  - total: '9.00'
+  - subtotal: 10.09
+  - tax: 1.09
+  - total: 9.00
   items:
-  - name: Bagel
-    price: '3.00'
-    quantity: '1'
-  - name: Sandwich
-    price: '5.00'
-    quantity: '2'
-  - name: Cookie
-    price: '1.00'
-    quantity: '1'
+  - name: "Bagel"
+    price: 3.00
+    quantity: 1
+  - name: "Sandwich"
+    price: 5.00
+    quantity: 2
+  - name: "Cookie"
+    price: 1.00
+    quantity: 1
   zones:
-  - type: totals
+  - type: "totals"
   offers:
-  - 439c5d30-2eb7-11e2-81c1-0800200c9a66
-  - 439c5d31-2eb7-11e2-81c1-0800200c9a66
-  - 439c5d32-2eb7-11e2-81c1-0800200c9a66
-  location: 439c5d33-2eb7-11e2-81c1-0800200c9a66
+  - "439c5d30-2eb7-11e2-81c1-0800200c9a66"
+  - "439c5d31-2eb7-11e2-81c1-0800200c9a66"
+  - "439c5d32-2eb7-11e2-81c1-0800200c9a66"
+  location: "439c5d33-2eb7-11e2-81c1-0800200c9a66"
 
 offers:
 - uuid: 439c5d30-2eb7-11e2-81c1-0800200c9a66
